cartas y turnos implementados en menu